tests/gen-derivation/derivation/core/norec part w_ext 001/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Only applications to non-polymorphic type constructors are supported at the moment

DerivedGen:15:14--15:23
 11 | %runElab derive "X" [Generic, Meta, Show]
 12 | 
 13 | export
 14 | checkedGen : Fuel -> (Fuel -> Gen MaybeEmpty String) => Gen MaybeEmpty X
 15 | checkedGen = deriveGen
                   ^^^^^^^^^

